--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vitest": "2.1.8"
   },
   "dependencies": {
+    "@fastify/jwt": "9.0.1",
     "@prisma/client": "6.0.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.13",
